# diraigent

./: .analyzer-sync-cache.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  codecov.yml  cosign.pub  gpg.pub  navigation.json  release.sh  renovate.json  seed-test-data.sh
.diraigent/: CHANGELOG.md  release.sh
.diraigent/decisions/: README.md
.diraigent/knowledge/: README.md
.diraigent/observations/: README.md
.diraigent/playbooks/: README.md  dreamer.yaml  standard.yaml
.forgejo/ISSUE_TEMPLATE/: bug.yaml  feature.yaml  proposal.yaml
.forgejo/images/: ci-deploy.Containerfile
.forgejo/workflows/: build-ci-images.yml  deploy-diraigent-api.yml  deploy-diraigent-landing.yml  deploy-diraigent-orchestra.yml  deploy-diraigent-web.yml  release-api.yml  release-diraigent.yml  release-orchestra.yml  release-web.yml  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
apps/: .env.example  docker-compose.yml
apps/analyzer/: Cargo.toml
apps/analyzer/src/: api_surface.rs  graph.rs  lib.rs  main.rs  scan.rs  summarize.rs  sync.rs
apps/api/: CLAUDE.md  Cargo.toml  Containerfile
apps/api/migrations/: 001_schema.sql  002_seed.sql  003_git_mode_check.sql  004_rename_project_root_fields.sql  005_agent_api_key.sql  006_seed_playbooks.sql  007_tenant_theme_preferences.sql  008_scratchpad.sql  009_fix_priority_index_order.sql  010_observation_source.sql  011_remove_mergesteps.sql  012_report.sql  013_task_logs.sql  014_task_reverted_at.sql  015_step_template.sql  016_seed_step_templates.sql  017_playbook_versions.sql  018_goal_epics.sql  019_goal_comments.sql  020_drop_scratchpad.sql  021_update_playbook_descriptions.sql  022_task_flagged.sql  023_goal_sort_order.sql  024_plan.sql  024_task_file_scope.sql  025_task_parent_id.sql  027_task_urgent_flag.sql  028_event_observation_rules.sql  029_goal_intent.sql  030_remove_plan.sql  031_remove_goal_target_date.sql  031_rename_goal_to_work.sql  032_task_state_entered_at.sql  033_provider_configs.sql  033_step_provider_base_url.sql  035_forgejo_ci.sql  036_ci_provider.sql  037_github_integration.sql  038_account_deletion.sql  039_integration_base_url_to_repo_url.sql  (+7 more)
apps/api/src/: ai.rs  auth.rs  authz.rs  chat.rs  constants.rs  crypto.rs  csrf.rs  error.rs  event_triggers.rs  lib.rs  main.rs  metrics.rs  models.rs  openapi.rs  package_cache.rs  quota.rs  rate_limit.rs  scoring.rs  stale_detector.rs  task_score.rs  tenant.rs  validation.rs  webhooks.rs  ws_protocol.rs  ws_registry.rs
apps/api/src/db/: crypto.rs  mod.rs  postgres.rs
apps/api/src/repository/: account.rs  agents.rs  audit.rs  decisions.rs  event_rules.rs  events.rs  files.rs  forgejo.rs  github.rs  goals.rs  integrations.rs  knowledge.rs  memberships.rs  metrics.rs  mod.rs  observations.rs  packages.rs  plans.rs  playbooks.rs  projects.rs  provider_configs.rs  related.rs  reports.rs  roles.rs  search.rs  step_templates.rs  task_logs.rs  tasks.rs  tenants.rs  transitions.rs  verifications.rs  webhooks.rs  work.rs
apps/api/src/routes/: account.rs  agents.rs  audit.rs  authentik_webhooks.rs  changed_files.rs  chat.rs  ci.rs  context.rs  dashboard.rs  decisions.rs  event_rules.rs  events.rs  files.rs  forgejo_webhooks.rs  git.rs  github_webhooks.rs  goals.rs  integrations.rs  knowledge.rs  locks.rs  logs.rs  members.rs  metrics.rs  mod.rs  observations.rs  orchestra_sync.rs  packages.rs  plans.rs  playbooks.rs  projects.rs  provider_configs.rs  reports.rs  roles.rs  scratchpad.rs  search.rs  settings.rs  source.rs  sse.rs  step_templates.rs  task_logs.rs  (+6 more)
apps/api/src/services/: embeddings.rs
apps/api/tests/integration/: authz.rs  encryption.rs  forgejo_webhooks.rs  harness.rs  main.rs  observations.rs  packages.rs  playbook.rs  projects.rs  scoring.rs  step_templates.rs  task_crud.rs  transitions.rs
apps/orchestra/: .env.example  CLAUDE.md  Cargo.toml  Containerfile  onboard.sh
apps/orchestra/src/: api.rs  chat.rs  cli.rs  config.rs  constants.rs  context.rs  crypto.rs  diraigent_config.rs  git.rs  git_handler.rs  git_strategy.rs  indexer.rs  lockfile.rs  log_monitor.rs  main.rs  pipeline.rs  plan_handler.rs  project_paths.rs  prompt.rs  repo_decisions.rs  repo_knowledge.rs  repo_observations.rs  repo_playbooks.rs  scheduler.rs  spawner.rs  sync.rs  task_id.rs  util.rs  worker.rs  ws_client.rs  ws_git_dispatch.rs  ws_protocol.rs
apps/orchestra/src/db/: mod.rs  schema.sql  task_execution.rs  task_logs.rs  task_updates.rs
apps/orchestra/src/engine/: context.rs  local_source.rs  mod.rs  orchestra_source.rs  pipeline.rs  prompt.rs  scheduler.rs  spawner.rs  step_profile.rs  task_source.rs  worker.rs
apps/orchestra/src/git/: handler.rs  merge.rs  mod.rs  provisioner.rs  query.rs  release.rs  strategy.rs  worktree.rs
apps/orchestra/src/handlers/: chat.rs  mod.rs  plan.rs
apps/orchestra/src/project/: api.rs  context.rs  diraigent_config.rs  mod.rs  paths.rs
apps/orchestra/src/providers/: anthropic.rs  claude_code.rs  copilot.rs  mod.rs  ollama.rs  openai.rs
apps/orchestra/src/templates/: release_merge_commit.sh  release_squash_merge.sh  release_tag_only.sh
apps/orchestra/src/ws/: git_dispatch.rs  mod.rs  protocol.rs
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  client.rs  main.rs  theme.rs
apps/tui/src/views/: agents.rs  audit.rs  chat.rs  dashboard.rs  decisions.rs  events.rs  git.rs  goals.rs  integrations.rs  knowledge.rs  logs.rs  mod.rs  observations.rs  plans.rs  playbooks.rs  project_settings.rs  reports.rs  search.rs  source.rs  tasks.rs  team.rs  verifications.rs  webhooks.rs  work.rs
apps/tui/src/widgets/: mod.rs  popup.rs  state_badge.rs
libs/common-rust/forgejo-client/: Cargo.toml
libs/common-rust/forgejo-client/src/: lib.rs  models.rs
libs/common-rust/shared-utils/: Cargo.toml  README.md
libs/common-rust/shared-utils/src/: config.rs  country.rs  data_utils.rs  grpc.rs  http_client.rs  language.rs  lib.rs  logging.rs  macros.rs  persistence.rs  server.rs  structs.rs  uuid_adapter.rs
scripts/: post-commit-index.sh
startup/: .env.example  docker-compose.yml  orchestra.yml  start.sh
(+255 files in other folders)
