[workspace]
members = [
    "libs/common-rust/*",
    "apps/api",
    "apps/tui",
    "apps/orchestra",
]

resolver = "2"

[workspace.dependencies]
diraigent-types = { path = "libs/common-rust/diraigent-types" }

# Core async runtime
tokio = { version = "1.45.1", features = ["full"] }

# Error handling
anyhow = "1.0.98"
async-trait = "0.1.64"

# gRPC and protobuf
tonic = "0.14.1"
tonic-reflection = "0.14.2"
tonic-tls = { version = "0.6.1", default-features = false, features = ["openssl"] }
tonic-health = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
prost = "0.14.1"
prost-types = "0.14.1"

# REST/HTTP
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "bigdecimal", "json", "migrate", "derive", "macros"] }
bigdecimal = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"

# Observability
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["tonic", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
tracing-loki = "0.2"

# Utilities
uuid = { version = "1.20.0", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
csv = "1.3.1"
once_cell = "1.21.3"

# JWT
jsonwebtoken = "9.3"

# HTTP client (for search-proxy)
reqwest = { version = "0.13.1", features = ["json"] }
urlencoding = "2.1"
thiserror = "2"

# Dev/test helpers
tokio-test = "0.4"

[profile.release]
strip = true
lto = true
codegen-units = 1
