[package]
name = "diraigent-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
ignore = "0.4"
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
