[package]
name = "diraigent-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
axum = { workspace = true, features = ["ws"] }
tower-http.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
reqwest = { workspace = true, features = ["stream"] }
opentelemetry.workspace = true
futures = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.10"
dashmap = "6"
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2"
aes-gcm = "0.10"
aes-kw = "0.2"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
base64 = "0.22"

diraigent-types.workspace = true

[dependencies.shared-utils]
path = "../../libs/common-rust/shared-utils"
features = ["rest"]

[dev-dependencies]
tokio-test.workspace = true
tower = { version = "0.5", features = ["util"] }
